--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
-    context-path: /api
+    context-path: /pie
   encoding:
     charset: UTF-8
     force: true
